--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,9 @@ venv.bak/
 *.db
 *.sqlite3
 *.sqlite3-journal
-function.zip
-functionupdated.zip
+updated_function.zip
+psycopg2forAWS
+python
 
 # OS generated files
 .DS_Store
