--- a/functions/requirements.txt
+++ b/functions/requirements.txt
@@ -1,6 +1,5 @@
-firebase_functions~=0.1.0
-firebase_admin~=6.3.0
-requests~=2.31.0
-python-dotenv~=1.0.0
+firebase_admin>=6.3.0
+requests>=2.31.0
 google-auth
-functions-framework
+google-cloud-firestore>=2.14.0
+firebase-functions
