cleaned up database, redeployed new cloud function

--- a/firebase.json
+++ b/firebase.json
@@ -3,16 +3,10 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
-  "functions": [
-    {
-      "source": "functions",
-      "codebase": "default",
-      "ignore": [
-        "venv",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log"
-      ]
-    }
-  ]
+  "functions": {
+    "source": "functions",
+    "predeploy": [
+      "echo 'Running predeploy script for Python Cloud Functions...'"
+    ]
+  }
 }
